[package]
name = "kanban"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dioxus = { version = "*", default-features = false, features = ["html", "hooks", "macro", "signals"] }
dioxus-native = { path = "/home/nik/rust/blitz/packages/dioxus-native", default-features = false }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "abort"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
